--- a/BookingFood/BookingFood/Base.lproj/Main.storyboard
+++ b/BookingFood/BookingFood/Base.lproj/Main.storyboard
@@ -896,14 +896,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="T1w-8C-RrN">
-                                <rect key="frame" x="107" y="88" width="214" height="214"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="T1w-8C-RrN" secondAttribute="height" id="6Y9-Z6-Grr"/>
-                                </constraints>
-                            </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="SGj-Sq-pEF">
-                                <rect key="frame" x="36" y="328" width="356" height="181.66666666666663"/>
+                                <rect key="frame" x="36" y="451.33333333333331" width="356" height="181.66666666666669"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xFa-NE-0Sz">
                                         <rect key="frame" x="0.0" y="0.0" width="173" height="20.333333333333332"/>
@@ -929,7 +923,7 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Tdi-rd-O2o">
-                                        <rect key="frame" x="0.0" y="40.333333333333314" width="313" height="20.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="40.333333333333371" width="313" height="20.333333333333329"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CfA-el-GM2">
                                                 <rect key="frame" x="0.0" y="0.0" width="117.66666666666667" height="20.333333333333332"/>
@@ -969,7 +963,7 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="tEJ-mn-rC2">
-                                        <rect key="frame" x="0.0" y="120.99999999999999" width="145.66666666666666" height="20.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="121.00000000000004" width="145.66666666666666" height="20.333333333333329"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order Quantity:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SNw-OM-yTs">
                                                 <rect key="frame" x="0.0" y="0.0" width="117.66666666666667" height="20.333333333333332"/>
@@ -1018,7 +1012,7 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="NaM-xo-G0U">
-                                <rect key="frame" x="107" y="545.66666666666663" width="214" height="151"/>
+                                <rect key="frame" x="107" y="669" width="214" height="151"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3kA-Jc-kGA">
                                         <rect key="frame" x="16" y="0.0" width="182" height="50.333333333333336"/>
@@ -1037,13 +1031,13 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j0B-bi-yUR">
-                                        <rect key="frame" x="99.333333333333343" y="66.333333333333371" width="15.666666666666671" height="27"/>
+                                        <rect key="frame" x="99.333333333333343" y="66.333333333333371" width="15.666666666666671" height="26.666666666666671"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uxk-dC-Y73">
-                                        <rect key="frame" x="68.333333333333343" y="109.33333333333339" width="77.333333333333343" height="41.666666666666671"/>
+                                        <rect key="frame" x="68.333333333333343" y="109" width="77.333333333333343" height="42"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Register"/>
                                         <connections>
@@ -1058,21 +1052,25 @@
                                     <constraint firstItem="3kA-Jc-kGA" firstAttribute="height" secondItem="NaM-xo-G0U" secondAttribute="height" multiplier="1:3" id="fq7-3y-RVc"/>
                                 </constraints>
                             </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="T1w-8C-RrN">
+                                <rect key="frame" x="0.0" y="0.0" width="428" height="415.33333333333331"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aFa-zH-Uoc"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="NaM-xo-G0U" firstAttribute="height" secondItem="aFa-zH-Uoc" secondAttribute="height" multiplier="1:5" id="0gK-UR-IuS"/>
+                            <constraint firstItem="SGj-Sq-pEF" firstAttribute="top" secondItem="T1w-8C-RrN" secondAttribute="bottom" constant="36" id="5Ig-AG-O7M"/>
                             <constraint firstItem="SGj-Sq-pEF" firstAttribute="centerX" secondItem="aFa-zH-Uoc" secondAttribute="centerX" id="5ef-II-e9X"/>
-                            <constraint firstItem="T1w-8C-RrN" firstAttribute="width" secondItem="aFa-zH-Uoc" secondAttribute="width" multiplier="1:2" id="DOi-Ny-SN2"/>
                             <constraint firstItem="NaM-xo-G0U" firstAttribute="width" secondItem="aFa-zH-Uoc" secondAttribute="width" multiplier="1:2" id="Ejx-vf-AGB"/>
-                            <constraint firstItem="T1w-8C-RrN" firstAttribute="centerX" secondItem="aFa-zH-Uoc" secondAttribute="centerX" id="IsT-H1-SGO"/>
-                            <constraint firstItem="T1w-8C-RrN" firstAttribute="top" secondItem="aFa-zH-Uoc" secondAttribute="top" id="KNC-FB-05a"/>
                             <constraint firstItem="NaM-xo-G0U" firstAttribute="top" secondItem="SGj-Sq-pEF" secondAttribute="bottom" constant="36" id="OOk-bv-NhH"/>
                             <constraint firstItem="NaM-xo-G0U" firstAttribute="centerX" secondItem="aFa-zH-Uoc" secondAttribute="centerX" id="Say-NJ-miJ"/>
                             <constraint firstItem="aFa-zH-Uoc" firstAttribute="trailing" secondItem="SGj-Sq-pEF" secondAttribute="trailing" constant="36" id="Vg3-XZ-Iu2"/>
+                            <constraint firstItem="T1w-8C-RrN" firstAttribute="top" secondItem="D87-0T-Vfb" secondAttribute="top" id="VhL-mU-NZz"/>
+                            <constraint firstItem="T1w-8C-RrN" firstAttribute="height" secondItem="aFa-zH-Uoc" secondAttribute="height" multiplier="0.55" id="dXI-je-IF4"/>
                             <constraint firstItem="SGj-Sq-pEF" firstAttribute="leading" secondItem="aFa-zH-Uoc" secondAttribute="leading" constant="36" id="gK3-Pf-wct"/>
-                            <constraint firstItem="SGj-Sq-pEF" firstAttribute="top" secondItem="T1w-8C-RrN" secondAttribute="bottom" constant="26" id="h9J-0i-zvf"/>
+                            <constraint firstItem="T1w-8C-RrN" firstAttribute="leading" secondItem="aFa-zH-Uoc" secondAttribute="leading" id="geS-IQ-1du"/>
+                            <constraint firstItem="aFa-zH-Uoc" firstAttribute="trailing" secondItem="T1w-8C-RrN" secondAttribute="trailing" id="v0V-CZ-Hxk"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="FDS-xm-hOJ"/>
@@ -1221,7 +1219,7 @@
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="🥲Forget Password ?"/>
                                                 <connections>
-                                                    <segue destination="jgw-dw-0g6" kind="show" id="ZOR-OE-yBD"/>
+                                                    <action selector="btnForget_Clicked:" destination="472-3r-3No" eventType="touchUpInside" id="iTx-Hq-JbZ"/>
                                                 </connections>
                                             </button>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="99N-t4-XrC">
@@ -1302,38 +1300,22 @@
             </objects>
             <point key="canvasLocation" x="4628.9719626168226" y="683.58531317494601"/>
         </scene>
-        <!--Forget PasswordVC-->
-        <scene sceneID="Xvz-5I-tSY">
-            <objects>
-                <viewController storyboardIdentifier="ForgetPasswordVC" id="jgw-dw-0g6" customClass="ForgetPasswordVC" customModule="BookingFood" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ych-jS-MZf">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="CgU-sO-Abg"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="Zhd-hw-EuL"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dW7-lF-XaD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="5544.3925233644859" y="683.58531317494601"/>
-        </scene>
         <!--REGISTER-->
         <scene sceneID="MKl-2f-oVI">
             <objects>
                 <viewController storyboardIdentifier="RegisterVC" id="BUr-PM-dJj" customClass="RegisterVC" customModule="BookingFood" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZFl-Nz-U0w">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slide1" translatesAutoresizingMaskIntoConstraints="NO" id="6hA-x9-Xrs">
-                                <rect key="frame" x="138.66666666666666" y="118" width="150.99999999999997" height="151"/>
+                                <rect key="frame" x="52.666666666666657" y="74" width="322.66666666666674" height="322.66666666666669"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="6hA-x9-Xrs" secondAttribute="height" multiplier="1:1" id="liX-Xh-bsq"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="PdH-xm-ef4" userLabel="Input Stack View">
-                                <rect key="frame" x="20" y="289" width="388" height="251.66666666666663"/>
+                                <rect key="frame" x="20" y="416.66666666666669" width="388" height="251.66666666666669"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="JU4-ya-5g9">
                                         <rect key="frame" x="0.0" y="0.0" width="388" height="42.333333333333336"/>
@@ -1343,7 +1325,7 @@
                                                 <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </imageView>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type your Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iAC-Lo-LXP">
-                                                <rect key="frame" x="23.666666666666657" y="4.3333333333333144" width="364.33333333333337" height="34"/>
+                                                <rect key="frame" x="23.666666666666657" y="4.3333333333333428" width="364.33333333333337" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
@@ -1410,7 +1392,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F4U-Rp-6JX">
-                                <rect key="frame" x="142.66666666666669" y="713.33333333333337" width="142.66666666666669" height="50"/>
+                                <rect key="frame" x="142.66666666666669" y="841" width="142.66666666666669" height="50"/>
                                 <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="8mb-MH-xVX"/>
@@ -1429,7 +1411,7 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.crop.circle.fill.badge.plus" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="3Ku-sF-eMG">
-                                <rect key="frame" x="141" y="551.33333333333326" width="144.33333333333331" height="141.66666666666669"/>
+                                <rect key="frame" x="141" y="679" width="144.33333333333331" height="141.66666666666663"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
@@ -1694,7 +1676,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="lQK-PF-lRy"/>
+        <segue reference="lim-ZX-Oe9"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="cart" catalog="system" width="128" height="102"/>
