--- a/BookingAppServer/FoodAppServer/Views/Home/CurrentProfile.cshtml
+++ b/BookingAppServer/FoodAppServer/Views/Home/CurrentProfile.cshtml
@@ -4,10 +4,17 @@
     ViewBag.Title = "User Info";
     Layout = "_Layout";
 }
-
+<style>
+    .avatar {
+      vertical-align: middle;
+      width: 6rem;
+      height: 6rem;
+      border-radius: 50%;
+    }
+</style>
 <div class="d-flex justify-content-center align-content-center">
 
-    <img src="~/@Model.Avatar" alt="avatar" width="250rem"/>
+    <img class="avatar" src="~/@Model.Avatar" alt="avatar"/>
     <dl class="row">
         <dt class="col-sm-3">
             @Html.DisplayNameFor(model => model.Fullname)
