--- a/BookingAppServer/FoodAppServer/Views/Home/Index.cshtml
+++ b/BookingAppServer/FoodAppServer/Views/Home/Index.cshtml
@@ -3,17 +3,28 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="d-flex">
 
-    @foreach (var category in Model)
-    {
-        <div class="card mx-2" style="width: 30rem;">
-            <img src="@category.Image" class="card-img-top" alt="categories" style="width: 100%; height: 250px">
-            <div class="card-body">
-                <h5 class="card-title">@category.Name</h5>
-                <p class="card-text">The description of each Categories</p>
-                <a asp-action="GetDishesbyCategory" asp-route-category="@category.Name" class="btn btn-info">Go</a>
+<div>
+    <h1>Category: <a class="btn btn-outline-secondary" asp-action="GetDishes">ALL</a></h1>
+    <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+        @foreach (var category in Model)
+        {
+            <div class="col col-sm-6 col-md-4">
+                <div class="card mb-4 rounded-3 shadow-sm">
+                    <div class="card-header py-3">
+                        <img src="@category.Image" class="card-img-top" alt="categories" style="width: 100%; height: 250px">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">@category.Name</h5>
+                        <p class="card-text">The description of each Categories</p>
+
+                    </div>
+                    <div class="card-footer">
+                        <a asp-action="GetDishesbyCategory" asp-route-category="@category.Name" class="btn btn-dark">Take a look</a>
+                    </div>
+                </div>
             </div>
-        </div>
-    }
+        }
+    </div>
+
 </div>
